--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My GitHub Page with Audio</title>
+    <title>Taylor Michaels - Voice Actor</title>
+    <link rel="stylesheet" href="styling/index.css">
   </head>
   <body>
+    <p>Demo Reel:</p>
     <audio controls>
       <source src="audio/demo_reel.wav" type="audio/wav">
       Your browser does not support the audio element.
